force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/cgcloud__Account_Trade_Org_Hierarchy__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the account hierarchy. From points to the higher trade org, to points to the lower trade org or store, The relation is time dependent.</description>
    <label>Customer Trade Org Hierarchy</label>
    <nameField>
        <displayFormat>TOH-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Trade Org Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>