force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/fields/cgcloud__Child_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Child_Account__c</fullName>
    <description>Reference to the business partner the relation is going to.</description>
    <label>Child Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Trade Org Hierarchies</relationshipLabel>
    <relationshipName>Account_Trade_Org_Child</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>