force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/fields/cgcloud__Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference from the business partner from which the relation is out going.</description>
    <label>Parent Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Trade Org Hierarchies (Parent Account)</relationshipLabel>
    <relationshipName>Account_Trade_Org_Parent</relationshipName>
    <type>Lookup</type>
</CustomField>