force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/validationRules/cgcloud__Child_Parent_Account_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Child_Parent_Account_Same</fullName>
    <active>true</active>
    <description>The Child Customer and the Parent Customer can&apos;t be the same.</description>
    <errorConditionFormula>cgcloud__Child_Account__c =  cgcloud__Parent_Account__c</errorConditionFormula>
    <errorMessage>The Child Customer and the Parent Customer can&apos;t be the same.</errorMessage>
</ValidationRule>