force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/validationRules/cgcloud__Parent_Account_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Parent_Account_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>OR (ISBLANK(cgcloud__Parent_Account__c), ISNULL(cgcloud__Parent_Account__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Parent_Account__c</errorDisplayField>
    <errorMessage>The Parent Customer can&apos;t be empty.</errorMessage>
</ValidationRule>