force-app/main/default/objects/cgcloud__Account_Trade_Org_Hierarchy__c/validationRules/cgcloud__Sales_Org_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_should_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>cgcloud__Child_Account__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Parent_Account__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>The Child Customer and the Parent Customer must have the same Sales Org.</errorMessage>
</ValidationRule>